AI Slop free, esnured accuracy

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -16,7 +16,7 @@ Built by core contributors to Lido and [P2P.ORG](http://p2p.org/), Structured is
 ## maxBTC Overview
 
 <Card title="Key Strategy Benefits" className="w-full mb-4">
-  <p className="mb-4">maxBTC generates BTC-denominated yield from Perpetual LP-ing and Funding Rates arbitrage, with historical performance averaging <strong>~25% APY</strong> during the 3-month on-chain pilot.</p>
+  <p className="mb-4">maxBTC generates BTC-denominated yield from Perpetual LP-ing and Funding Rates arbitrage, with historical performance averaging <strong>~25% APY</strong> during the 3-month on-chain pilot. The strategy's APY is expected to stabilize at 10-20% range over time.</p>
 </Card>
 
 <CardGroup cols={2} className="mb-6">
@@ -36,7 +36,7 @@ Built by core contributors to Lido and [P2P.ORG](http://p2p.org/), Structured is
 
 ## Historical Performance
 
-Based on a 90-day proof of concept with mainnet assets, the maxBTC strategy achieved a **25% average APY**. The rolling 30-day average APY typically fluctuated between 10% and 40%.
+Based on a 90-day proof of concept with mainnet assets, the maxBTC strategy achieved a **25% average APY**. The rolling 30-day average APY typically fluctuated between 10% and 40%. The strategy benefited from market volatility during the proof of concept period, and we expect the APY to stabilize at a 10-20% range over time.
 
 <Frame className="w-full">
   <img src="/images/historical-performance.png" alt="Historical APY Performance" />
