--- a/private_deposits/overview.mdx
+++ b/private_deposits/overview.mdx
@@ -6,7 +6,7 @@ icon: "lock"
 
 # Private Deposits Overview
 
-MaxBTC is Structured's first tokenized trading strategy, offering holders composable and liquid BTC denominated yield. This document introduces the Private Deposits phase of maxBTC launch.
+maxBTC is Structured's first tokenized trading strategy, offering holders composable and liquid BTC denominated yield. This document introduces the Private Deposits phase of maxBTC launch.
 
 ## Introduction
 
