--- a/private_deposits/risks.mdx
+++ b/private_deposits/risks.mdx
@@ -54,14 +54,12 @@ Our monitoring system includes:
 
 <CardGroup cols={2}>
   <Card title="Off-Exchange Custody" icon="vault">
-    30% of deposited WBTC is held in off-exchange custody with Ceffu, a leading institutional custodian, for potential Binance collateralization.
+    30% of deposited WBTC is held in off-exchange custody with Ceffu, a leading institutional custodian, for potential Binance collateralization. Collateral is transferred between custody and exchanges ONLY when required to settle funding obligations or realized P&L.
   </Card>
   <Card title="On-Chain Transparency" icon="blockchain">
-    70% of the deposited WBTC is held on-chain in a Solana multisig wallet in the form of $JLP.
+    70% of the deposited WBTC is held on-chain in a Solana multisig wallet in the form of $JLP. The Solana multisig participants represent geographically distributed key holders that have vast industry experience and contribute actively to DeFi projects and funds.
   </Card>
 </CardGroup>
-
-The Solana multisig participants represent geographically distributed key holders that have vast industry experience and contribute actively to DeFi projects and funds.
 
 ## Value BTC-Denominated
 
