--- a/strategy/technical_details.mdx
+++ b/strategy/technical_details.mdx
@@ -4,32 +4,59 @@ description: "Technical implementation of the maxBTC yield strategy"
 icon: "gears"
 ---
 
-# Technical Strategy Details
+# Implementation Architecture
 
-This page outlines the technical implementation details of the maxBTC strategy, explaining how we generate BTC-denominated yield while maintaining appropriate risk controls.
+This page provides a technical deep-dive into how the maxBTC strategy is implemented, including position management, rebalancing mechanics, and risk controls.
 
-## Position Management
+## Position Management Framework
 
-<img src="/images/position-management.png" alt="Position Management Diagram" className="w-full" />
-{/* [IMAGE NEEDED: Add a diagram showing position management workflow] */}
-
-### JLP Position Management
-
-The Jupiter Liquidity Provider (JLP) position represents approximately 70% of the deployed capital. This position:
-
-- Is held on Solana blockchain in a secure multisig wallet
-- Generates fees from the Jupiter perpetuals DEX
-- Fluctuates based on the performance of the underlying assets (BTC, ETH, SOL, USDC/USDT)
-
-The system constantly monitors the token composition of JLP to maintain accurate hedging positions.
-
-### CEX Hedging
-
-The remaining 30% of capital is deployed on centralized exchanges (primarily Binance) to:
-
-1. Create delta-neutral exposure to non-BTC assets in the JLP
-2. Maintain an effective 1x long BTC position
-3. Manage funding rate exposure
+<div className="grid grid-cols-1 md:grid-cols-2 gap-4 mt-6">
+  <Card>
+    <div className="flex items-center mb-4">
+      <div className="mr-2 text-xl text-amber-500">
+        <i className="fas fa-coins"></i>
+      </div>
+      <h3 className="text-lg font-semibold">JLP Position (70%)</h3>
+    </div>
+    <div className="space-y-2">
+      <div className="flex items-start">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2 mt-1.5"></div>
+        <span>Held on Solana blockchain in secure multisig</span>
+      </div>
+      <div className="flex items-start">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2 mt-1.5"></div>
+        <span>Generates Perp DEX LP revenue</span>
+      </div>
+      <div className="flex items-start">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2 mt-1.5"></div>
+        <span>Composition monitored for accurate hedging</span>
+      </div>
+    </div>
+  </Card>
+  
+  <Card>
+    <div className="flex items-center mb-4">
+      <div className="mr-2 text-xl text-amber-500">
+        <i className="fas fa-balance-scale"></i>
+      </div>
+      <h3 className="text-lg font-semibold">CEX Hedging (30%)</h3>
+    </div>
+    <div className="space-y-2">
+      <div className="flex items-start">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2 mt-1.5"></div>
+        <span>Creates delta-neutral exposure to non-BTC assets</span>
+      </div>
+      <div className="flex items-start">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2 mt-1.5"></div>
+        <span>Maintains effective 1x long BTC position</span>
+      </div>
+      <div className="flex items-start">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2 mt-1.5"></div>
+        <span>Manages funding rate cost</span>
+      </div>
+    </div>
+  </Card>
+</div>
 
 ```mermaid
 graph TD
@@ -38,7 +65,7 @@ graph TD
     Hedge --> Short_SOL[Short SOL Position]
     Hedge --> Long_BTC[Long BTC Position]
     
-    Short_ETH & Short_SOL & Long_BTC --> Balance[Net Exposure]
+    Short_ETH & Short_SOL & Long_BTC --> Balance[Net Exposure: 1x BTC]
     Balance -->|Rebalance if necessary| CEX[CEX Positions]
     
     JLP -->|Fee Generation| Yield[Yield Calculation]
@@ -46,30 +73,66 @@ graph TD
     Yield --> APY[BTC-denominated APY]
 ```
 
-
 ## APY Calculation Methodology
 
-maxBTC reports APY figures calculated in BTC terms, rather than USD terms. This means:
+<Card title="BTC-Denominated Performance Metrics" className="w-full mb-6">
+  <p>maxBTC reports all performance metrics in BTC terms rather than USD. This means:</p>
+  <ul className="list-disc pl-5 mt-2">
+    <li>All positions and yields are evaluated in their BTC-denominated value</li>
+    <li>APY reflects how much additional BTC you effectively accumulate</li>
+    <li>Value per share (VPS) tracks each investor's proportional ownership</li>
+  </ul>
+</Card>
 
-- All positions and yields are evaluated in their BTC-denominated value
-- The reporting focuses on how much BTC you effectively accumulate
-- The value per share (VPS) metric tracks each investor's proportional ownership
+### APY Components Breakdown
 
-### APY Components
-
-<CardGroup cols={1} className="w-full">
-  <Card title="JLP APY">
-    This is the primary yield component, typically ranging from high single-digit percentages to as much as 40%, depending on market conditions and trading activity on Jupiter.
+<div className="space-y-6 mt-4">
+  <Card>
+    <h4 className="text-lg font-semibold mb-2">JLP APY Component (Primary Yield Driver)</h4>
+    <p className="mb-3">This is the primary yield component, typically ranging from high single-digit percentages to as much as 40%, depending on market conditions and trading activity on Jupiter.</p>
+    
+    <p className="mb-1 font-medium">Revenue Sources:</p>
+    <ul className="list-inside mb-3">
+      <li className="flex items-start">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2 mt-1.5"></div>
+        <span>Trading fees from perpetual DEX activity</span>
+      </li>
+      <li className="flex items-start">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2 mt-1.5"></div>
+        <span>Borrowing fees from leveraged positions</span>
+      </li>
+      <li className="flex items-start">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2 mt-1.5"></div>
+        <span>Liquidation proceeds from underwater positions</span>
+      </li>
+    </ul>
+    
+    <div className="flex items-center gap-2">
+      <span className="font-medium">Range:</span>
+      <span className="text-amber-500 font-semibold">5-40%</span>
+    </div>
   </Card>
   
-  <Card title="Hedging APY">
-    Generated by rebalancing positions whenever the JLP trades at a discount or premium relative to its BTC valuation. Typically yields approximately 0.5% annually.
+  <Card>
+    <h4 className="text-lg font-semibold mb-2">Rebalancing Arbitrage Component</h4>
+    <p className="mb-3">Generated by rebalancing positions whenever the JLP trades at a discount or premium relative to its BTC valuation.</p>
+    
+    <div className="flex items-center gap-2">
+      <span className="font-medium">Range:</span>
+      <span className="text-amber-500 font-semibold">~0.5%</span>
+    </div>
   </Card>
   
-  <Card title="Funding Rate Cost">
-    This is typically a cost rather than a yield component. Historically ranges between -1% and -4%, though it can become positive during extreme market conditions.
+  <Card>
+    <h4 className="text-lg font-semibold mb-2">Funding Rate Impact</h4>
+    <p className="mb-3">This is typically a cost rather than a yield component, though it can become positive during extreme market conditions.</p>
+    
+    <div className="flex items-center gap-2">
+      <span className="font-medium">Range:</span>
+      <span className="text-amber-500 font-semibold">-4% to +1%</span>
+    </div>
   </Card>
-</CardGroup>
+</div>
 
 <Note>
 There can be discrepancies between the displayed APY on Jupiter's interface and the realized APY of maxBTC because:
@@ -79,32 +142,138 @@ There can be discrepancies between the displayed APY on Jupiter's interface and 
 3. Jupiter displays APY in USD terms while we translate to BTC terms
 </Note>
 
-## Risk Management
+## Technical Rebalancing Process
 
-The strategy employs multiple risk management techniques:
+<Card title="Optimal Rebalancing Logic" className="w-full mb-6">
+  Our rebalancing system uses a proprietary algorithm to determine the optimal timing and size of rebalancing operations, considering:
+  
+  <div className="grid grid-cols-1 md:grid-cols-2 gap-4 mt-3">
+    <div className="flex items-center">
+      <div className="w-1.5 h-2 rounded-full bg-amber-500 mr-1.5"></div>
+      <span>Gas costs vs expected arbitrage profit</span>
+    </div>
+    <div className="flex items-center">
+      <div className="w-1.5 h-2 rounded-full bg-amber-500 mr-1.5"></div>
+      <span>Market slippage on entry/exit</span>
+    </div>
+    <div className="flex items-center">
+      <div className="w-1.5 h-2 rounded-full bg-amber-500 mr-1.5"></div>
+      <span>JLP price deviations from NAV</span>
+    </div>
+    <div className="flex items-center">
+      <div className="w-1.5 h-2 rounded-full bg-amber-500 mr-1.5"></div>
+      <span>Market volatility conditions</span>
+    </div>
+  </div>
+</Card>
 
-### Liquidation Protection
 
-With a 70/30 deployment ratio, the strategy is designed to withstand a BTC price drop of approximately 45% before facing liquidation risk. This safety buffer has proven sufficient based on historical data - BTC has never experienced a weekly drop exceeding 33.52% since perpetual listing on Binance in 2019.
+```mermaid
+flowchart LR
+    A[JLP Price] -- Compare --> B[Underlying NAV]
+    B -- Deviation > Threshold --> C{Rebalance?}
+    C -- Yes --> D[Calculate Size]
+    D --> E[Execute Rebalance]
+    C -- No --> F[Monitor]
+    E --> G[Update Positions]
+    G --> A
+```
 
-Alternative deployment ratios offer different risk/reward profiles:
-- **40-60 Deployment**: Requires a 66.6% price drop for liquidation, with a yield reduction of 14%
-- **50-50 Deployment**: Virtually eliminates liquidation risk but reduces yield by 28%
+## Advanced Hedging Techniques
 
-### Hedging Approach
+<AccordionGroup>
+  <Accordion title="JLP Composition Analysis">
+    <div className="space-y-4">
+      <p>We continuously monitor the JLP composition to ensure accurate hedging:</p>
+      
+      <div className="flex items-center">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2"></div>
+        <span>Regular analysis of token distribution in the JLP</span>
+      </div>
+      <div className="flex items-center">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2"></div>
+        <span>Tracking exposure to SOL, ETH, and other assets</span>
+      </div>
+      <div className="flex items-center">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2"></div>
+        <span>Adjusting hedges based on changing pool composition</span>
+      </div>
+    </div>
+  </Accordion>
+  
+  <Accordion title="Exchange Execution">
+    <div className="space-y-4">
+      <p>We optimize for efficient execution when rebalancing:</p>
+      
+      <div className="flex items-center">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2"></div>
+        <span>Minimizing slippage on entry and exit</span>
+      </div>
+      <div className="flex items-center">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2"></div>
+        <span>Order splitting to manage market impact</span>
+      </div>
+      <div className="flex items-center">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2"></div>
+        <span>Efficient gas usage for on-chain transactions</span>
+      </div>
+    </div>
+  </Accordion>
+  
+  <Accordion title="Funding Rate Management">
+    <div className="space-y-4">
+      <p>We actively monitor funding rates to manage costs:</p>
+      
+      <div className="flex items-center">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2"></div>
+        <span>Monitoring funding rate environments across markets</span>
+      </div>
+      <div className="flex items-center">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2"></div>
+        <span>Balancing hedging needs with funding rate costs</span>
+      </div>
+      <div className="flex items-center">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2"></div>
+        <span>Accounting for funding impact on overall strategy returns</span>
+      </div>
+    </div>
+  </Accordion>
+</AccordionGroup>
 
-The hedging strategy focuses on:
-1. Underlying tokens in JLP (rather than weights on JLP index)
-2. Net trader positions against the JLP pool
+## Position Monitoring Infrastructure
 
-This ensures a more accurate hedge that adjusts to real-time market conditions rather than relying on static allocations.
-
-### Position Monitoring
-
-The system continuously monitors:
-- JLP token composition
-- Net positions of traders
-- Price movements of all relevant assets
-- Collateral levels and liquidation thresholds
-
-Automated alerts trigger if any metric approaches predefined risk thresholds.
+<div className="grid grid-cols-1 md:grid-cols-2 gap-4 mb-6">
+  <Card title="Automated Monitoring Systems" icon="robot">
+    <div className="space-y-2">
+      <div className="flex items-start">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2 mt-1.5"></div>
+        <span>24/7 position tracking with custom alerting thresholds</span>
+      </div>
+      <div className="flex items-start">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2 mt-1.5"></div>
+        <span>Real-time risk metrics calculation (VaR, stress tests)</span>
+      </div>
+      <div className="flex items-start">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2 mt-1.5"></div>
+        <span>Custom API integrations with exchange platforms</span>
+      </div>
+    </div>
+  </Card>
+  
+  <Card title="Multi-signature Security" icon="key">
+    <div className="space-y-2">
+      <div className="flex items-start">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2 mt-1.5"></div>
+        <span>Geographically distributed key holders</span>
+      </div>
+      <div className="flex items-start">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2 mt-1.5"></div>
+        <span>Tiered access controls based on transaction size</span>
+      </div>
+      <div className="flex items-start">
+        <div className="w-1.5 h-1.5 rounded-full bg-amber-500 mr-2 mt-1.5"></div>
+        <span>Hardware security module integration</span>
+      </div>
+    </div>
+  </Card>
+</div>
